revise files order

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,29 @@
 *
 !.gitignore
-!freg-nox
 !README
 !COPYING
-freg-nox/*
-!freg-nox/*.cpp
-!freg-nox/*.h
-!freg-nox/*.ts
-!freg-nox/*.pro
-!freg-nox/*.vim
+!Freg.pro
+!*.cpp
+!*.h
+!*.ts
+!*.vim
 
-!freg-nox/blocks
-freg-nox/blocks/*
-!freg-nox/blocks/*.cpp
-!freg-nox/blocks/*.h
+!blocks
+blocks/*
+!blocks/*.cpp
+!blocks/*.h
 
-!freg-nox/help_*
-freg-nox/help_*/*
-!freg-nox/help_*/*.txt
+!screens
+screens/*
+!screens/*.cpp
+!screens/*.h
 
-!freg-nox/texts
-freg-nox/texts/*
-!freg-nox/texts/*.txt
-freg-nox/texts/errors.txt
-freg-nox/texts/messages.txt
+!help_*
+help_*/*
+!help_*/*.txt
+
+!texts
+texts/*
+!texts/*.txt
+texts/errors.txt
+texts/messages.txt
